--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -11,6 +11,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=auth.db"
+  },
+  "LockoutSettings": {
+    "FailedAttemptsThreshold": 5,
+    "LockoutMinutes": 15,
+    "TrustedIps": [ "192.168.60.41" ]
   }
 }
 
