User Lockout (not just IP)

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -15,7 +15,9 @@
   "LockoutSettings": {
     "FailedAttemptsThreshold": 5,
     "LockoutMinutes": 15,
-    "TrustedIps": [ "192.168.60.41" ]
+    "TrustedIps": [ "192.168.60.41" ],
+    "UserFailedAttemptsThreshold": 7,
+    "UserLockoutMinutes": 20
   }
 }
 
