--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -18,6 +18,20 @@
     "TrustedIps": [ "192.168.60.41" ],
     "UserFailedAttemptsThreshold": 7,
     "UserLockoutMinutes": 20
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Forwarded-For",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 100
+      }
+    ]
   }
 }
 
