--- a/AuthService/Dockerfile
+++ b/AuthService/Dockerfile
@@ -1,29 +1,21 @@
 # See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-USER $APP_UID
-WORKDIR /app
-EXPOSE 8082
-EXPOSE 8083
-
-# This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["AuthService/AuthService.csproj", "AuthService/"]
 RUN dotnet restore "./AuthService/AuthService.csproj"
 COPY . .
 WORKDIR "/src/AuthService"
-RUN dotnet build "./AuthService.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet publish "./AuthService.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# This stage is used to publish the service project to be copied to the final stage
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./AuthService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
-FROM base AS final
+# Runtime stage
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
+
+# Healthcheck (adjust port if needed)
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+  CMD curl --fail http://localhost:5000/api/auth/health || exit 1
+
 ENTRYPOINT ["dotnet", "AuthService.dll"]
