Enhance documentation and refactor authentication setup
- Added XML documentation generation in `AuthService.csproj`.
- Improved method documentation in `AuthController.cs`.
- Removed authentication setup code in `Program.cs`.
- Expanded `README.md` with setup instructions, API details, and contribution guidelines.

--- a/AuthService/AuthService.csproj
+++ b/AuthService/AuthService.csproj
@@ -6,6 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>89042713-6e7f-4597-945a-12b3bb89ca79</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 
   <ItemGroup>
