--- a/AuthService/Dockerfile
+++ b/AuthService/Dockerfile
@@ -1,5 +1,11 @@
 # See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER $APP_UID
+WORKDIR /app
+EXPOSE 8080
+EXPOSE 8081
+
 # Build stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
@@ -14,8 +20,9 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
 COPY --from=build /app/publish .
 
+
 # Healthcheck (adjust port if needed)
 HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
-  CMD curl --fail http://localhost:5000/api/auth/health || exit 1
+  CMD curl --fail http://localhost:8080/api/auth/health || exit 1
 
 ENTRYPOINT ["dotnet", "AuthService.dll"]
